Add test branch and master to except

--- a/shippable.yml
+++ b/shippable.yml
@@ -6,6 +6,11 @@ go:
 
 env:
   - CI_REPORT=shippable/testresults/junit.xml
+  
+branches:
+  except:
+    - test-branch
+    - master
 
 before_install:
   - export GOPATH=$SHIPPABLE_GOPATH
