notifs email:false (for default)

--- a/shippable.yml
+++ b/shippable.yml
@@ -29,5 +29,4 @@ script:
   - $GOPATH/bin/gocover-cobertura < coverage.txt > shippable/codecoverage/coverage.xml
   
 notifications:
-  email:
-    on_success: always
+  email: false
