--- a/shippable.yml
+++ b/shippable.yml
@@ -27,3 +27,8 @@ before_script:
 script:
   - go test -coverprofile=coverage.txt -covermode count ./
   - $GOPATH/bin/gocover-cobertura < coverage.txt > shippable/codecoverage/coverage.xml
+
+notifications:
+  email:
+    recipients:
+      - stephanie@shippable.com
